--- a/SIENI/SIENI-web/src/main/webapp/login.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/login.xhtml
@@ -17,34 +17,38 @@
     </h:head>
 
     <h:body styleClass="loginbodyblue">
+        <h:form id="form">
+            <div class="Wid90 DispBlock MarAuto MarTopPerc5 TexAlCenter">
+                <div class="Wid33 MarAuto WidAutoOnMobile">
 
-        <div class="Wid90 DispBlock MarAuto MarTopPerc5 TexAlCenter">
-            <div class="Wid33 MarAuto WidAutoOnMobile">
-                <h:graphicImage name="mined.jpg" library="images" style="width:40%; max-width:200px;"/>
-                <div class="EmptyBox30"></div>
-                <div class="Card ShadowEffect">
-                    <div class="EmptyBox20"></div>
-                    <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-users Fs40"></i>Bienvenido a SIENI</div>
-                    <div class="EmptyBox20"></div>
-                    <div class="Wid100"><p:inputText placeholder="Usuario" styleClass="Wid80 TexAlCenter Fs18"/></div>
-                    <div class="EmptyBox10"></div>
-                    <div class="Wid100"><p:inputText type="password" placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18"/></div>
+                    <h:graphicImage name="mined.jpg" library="images" style="width:40%; max-width:200px;"/>
                     <div class="EmptyBox30"></div>
-                    <div class="Wid100"><p:button value="Ingresar" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton" href="index.xhtml"/></div>
-                    <div class="EmptyBox20"></div>
-                </div>
-                <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
-                    <i class="fa fa-copyright"></i>  Copyright 2015
+                    <div class="Card ShadowEffect">
+                        <div class="EmptyBox20"></div>
+                        <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-users Fs40"></i>Bienvenido a SIENI</div>
+                        <div class="EmptyBox20"></div> 
+                        <div class="Wid100"><p:inputText  placeholder="Usuario" value="#{loginController.usuario}" styleClass="Wid80 TexAlCenter Fs18" required="true" requiredMessage="Debe ingresar usuario" /></div>
+                        <div class="EmptyBox10"></div>
+                        <div class="Wid100"><p:inputText type="password" value="#{loginController.password}" placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18" required="true" requiredMessage="Debe ingresar contraseña"/></div>
+                        <div class="EmptyBox30"></div>
+                        <p:commandButton value="Ingresar" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton " actionListener="#{loginController.login}" update="form" class="Wid100" />
+                        <div class="EmptyBox20"></div>
+                    </div>
+                    <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
+                        <i class="fa fa-copyright"></i>  Copyright 2015
+                    </div>
+
                 </div>
             </div>
-        </div>
 
-        <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
-        <h:outputStylesheet name="css/animate.css" library="rio-layout" />
-        <h:outputStylesheet name="css/rio-font.css" library="rio-layout" />
-        <h:outputStylesheet name="css/ripple-effect.css" library="rio-layout" />
-        <h:outputStylesheet name="css/font-awesome.css" library="rio-layout" />
-        <h:outputStylesheet name="css/rio-layout.css" library="rio-layout" />
+            <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
+            <h:outputStylesheet name="css/animate.css" library="rio-layout" />
+            <h:outputStylesheet name="css/rio-font.css" library="rio-layout" />
+            <h:outputStylesheet name="css/ripple-effect.css" library="rio-layout" />
+            <h:outputStylesheet name="css/font-awesome.css" library="rio-layout" />
+            <h:outputStylesheet name="css/rio-layout.css" library="rio-layout" />
+            <p:growl autoUpdate="true"></p:growl>
+        </h:form>
     </h:body>
 
 </html>
