--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -4,7 +4,8 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui"
-    xmlns:pr="http://primefaces.org/rio">
+    xmlns:pr="http://primefaces.org/rio"
+    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <div class="Animated05" id="layout-menu-cover">
         <ul class="layout-menu">
@@ -26,50 +27,113 @@
         </ul>
         <div class="Separator"></div>
         <h:form>
-            <pr:menu >
-                <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
-                <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
-                <p:submenu label="Administración de Sistema">
-                    <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
-                    <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
-                </p:submenu>
-                <p:submenu label="Gestionar Año Escolar">
-                    <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
-                    <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
-                </p:submenu>
-                <p:submenu label="Gestionar Curso">
-                    <p:menuitem value="Mantenimiento de Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" />
-                    <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
-                    <p:submenu label="Gestionar Clases">
-                        <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
-                        <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
-                        <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
-                        <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
-                        <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+
+            <c:if test="#{loginController.tipoRol=='0'}">
+                <pr:menu >
+                    <p:submenu label="Cursos">
+                        <p:submenu label="Clases">
+                            <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
+                            <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
+                            <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
+                            <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
+                            <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                        </p:submenu>
+                        <p:menuitem value="Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
+                        <p:menuitem value="Notas" url="#{siteUrls.gestionNota}" />
                     </p:submenu>
-                    <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
-                    <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
-                    <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
-                    <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
-                </p:submenu>
-                <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
-                <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
-                <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
-                <p:submenu label="Generar Reportes">
-                    <p:menuitem value="Reporte de Matricula" url="#{siteUrls.reporteMatricula}" />
-                    <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
-                    <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
-                    <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
-                    <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
-                    <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
-                    <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
-                    <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
-                    <p:menuitem value="Reporte de Alumnos" url="#{siteUrls.reporteAlumnos}" />
-                    <p:menuitem value="Reporte de Docentes" url="#{siteUrls.reporteDocentes}" />
-                    <p:menuitem value="Reporte de Usuarios" url="#{siteUrls.reporteUsuarios}" />
-                </p:submenu>
-                <p:separator />
-            </pr:menu>
+                    <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
+                    <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
+                    <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
+                    <p:separator />
+                </pr:menu>
+            </c:if>
+            <c:if test="#{loginController.tipoRol=='1'}">
+                <pr:menu >
+                    <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+                    <p:submenu label="Gestionar Año Escolar">
+                        <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
+                        <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
+                    </p:submenu>
+                    <p:submenu label="Gestionar Curso">
+                        <p:menuitem value="Mantenimiento de Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" />
+                        <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
+                        <p:submenu label="Gestionar Clases">
+                            <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
+                            <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
+                            <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
+                            <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
+                            <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                        </p:submenu>
+                        <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
+                        <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
+                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
+                        <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
+                    </p:submenu>
+                    <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
+                    <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
+                    <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
+                    <p:submenu label="Generar Reportes">
+                        <p:menuitem value="Reporte de Matricula" url="#{siteUrls.reporteMatricula}" />
+                        <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
+                        <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
+                        <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
+                        <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
+                        <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
+                        <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
+                        <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
+                        <p:menuitem value="Reporte de Alumnos" url="#{siteUrls.reporteAlumnos}" />
+                        <p:menuitem value="Reporte de Docentes" url="#{siteUrls.reporteDocentes}" />
+                        <p:menuitem value="Reporte de Usuarios" url="#{siteUrls.reporteUsuarios}" />
+                    </p:submenu>
+                    <p:separator />
+                </pr:menu>
+            </c:if>
+            <c:if test="#{loginController.tipoRol=='2'}">
+                <pr:menu >
+                    <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+                    <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
+                    <p:submenu label="Administración de Sistema">
+                        <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
+                        <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
+                    </p:submenu>
+                    <p:submenu label="Gestionar Año Escolar">
+                        <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
+                        <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
+                    </p:submenu>
+                    <p:submenu label="Gestionar Curso">
+                        <p:menuitem value="Mantenimiento de Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" />
+                        <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
+                        <p:submenu label="Gestionar Clases">
+                            <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
+                            <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
+                            <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
+                            <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
+                            <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                        </p:submenu>
+                        <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
+                        <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
+                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
+                        <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
+                    </p:submenu>
+                    <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
+                    <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
+                    <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
+                    <p:submenu label="Generar Reportes">
+                        <p:menuitem value="Reporte de Matricula" url="#{siteUrls.reporteMatricula}" />
+                        <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
+                        <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
+                        <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
+                        <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
+                        <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
+                        <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
+                        <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
+                        <p:menuitem value="Reporte de Alumnos" url="#{siteUrls.reporteAlumnos}" />
+                        <p:menuitem value="Reporte de Docentes" url="#{siteUrls.reporteDocentes}" />
+                        <p:menuitem value="Reporte de Usuarios" url="#{siteUrls.reporteUsuarios}" />
+                    </p:submenu>
+                    <p:separator />
+                </pr:menu>
+            </c:if>
         </h:form>
     </div>
 
