Correcciones: 	login, enter-tabindex, bug calendario, gestion archivos multimedia (modificar, ver, copia temporal), reporte de alumnos, gestion de alumnos

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -108,6 +108,35 @@
                         day: 'Día',
                         allDayText: 'Todo el día'
                     };
+
+                    //tabulacion al precionar enter
+                    $(document).ready(function () {
+                        /* Aquí podría filtrar que controles necesitará manejar,
+                         * en el caso de incluir un dropbox $('input, select');
+                         */
+                        tb = $('input');
+
+                        if ($.browser.mozilla) {
+                            $(tb).keypress(enter2tab);
+                        } else {
+                            $(tb).keydown(enter2tab);
+                        }
+                    });
+                    function enter2tab(e) {
+                        if (e.keyCode == 13) {
+                            if ($('.ui-datepicker').css('display') == 'block') {
+                                $('.ui-datepicker').css('display', 'none');
+                            }
+                            cb = parseInt($(this).attr('tabindex'));
+
+                            if ($(':input[tabindex=\'' + (cb + 1) + '\']') != null) {
+                                $(':input[tabindex=\'' + (cb + 1) + '\']').focus();
+                                $(':input[tabindex=\'' + (cb + 1) + '\']').select();
+                                e.preventDefault();
+                                return false;
+                            }
+                        }
+                    }
                 </script>
                 <ui:include src="topbar.xhtml" />
 
