--- a/SIENI/SIENI-web/src/main/webapp/login.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/login.xhtml
@@ -18,6 +18,8 @@
 
     <h:body styleClass="loginbodyblue">
         <h:form id="form">
+
+            <p:focus context="form"/>
             <div class="Wid90 DispBlock MarAuto MarTopPerc5 TexAlCenter">
                 <div class="Wid33 MarAuto WidAutoOnMobile">
 
@@ -26,10 +28,16 @@
                     <div class="Card ShadowEffect">
                         <div class="EmptyBox20"></div>
                         <div class="Wid100 OvHidden BigTopic Fs30"><i class="icon-users Fs40"></i>Bienvenido a SIENI</div>
+                        <div class="Wid100 OvHidden Fs20">Login</div>
                         <div class="EmptyBox20"></div> 
-                        <div class="Wid100"><p:inputText  placeholder="Usuario" value="#{loginController.usuario}" styleClass="Wid80 TexAlCenter Fs18" required="true" requiredMessage="Debe ingresar usuario" /></div>
-                        <div class="EmptyBox10"></div>
-                        <div class="Wid100"><p:inputText type="password" value="#{loginController.password}" placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18" required="true" requiredMessage="Debe ingresar contraseña"/></div>
+                        <div class="Wid100">
+                            <h:panelGrid columns="2" class="Wid100">
+                                <p:outputLabel for="usuario" value="Usuario:"></p:outputLabel>
+                                <p:inputText id="usuario" autocomplete="false" tabindex="1"  placeholder="Usuario" value="#{loginController.usuario}" styleClass="Wid80 TexAlCenter Fs18" required="true" requiredMessage="Debe ingresar usuario" />
+                                <p:outputLabel for="pass" value="Contraseña:"></p:outputLabel>
+                                <p:inputText id="pass" autocomplete="false" tabindex="2" type="password" value="#{loginController.password}" placeholder="Contraseña" styleClass="Wid80 TexAlCenter Fs18" required="true" requiredMessage="Debe ingresar contraseña"/>
+                            </h:panelGrid>
+                        </div>
                         <div class="EmptyBox30"></div>
                         <p:commandButton value="Ingresar" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton " actionListener="#{loginController.login}" update="form" class="Wid100" />
                         <div class="EmptyBox20"></div>
@@ -48,6 +56,7 @@
             <h:outputStylesheet name="css/font-awesome.css" library="rio-layout" />
             <h:outputStylesheet name="css/rio-layout.css" library="rio-layout" />
             <p:growl autoUpdate="true"></p:growl>
+
         </h:form>
     </h:body>
 
