--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -14,6 +14,7 @@
             </f:facet>
             <title>SIENI</title>
             <h:outputScript name="popcorn-complete.min.js" library="js" />
+            <h:outputScript name="RTCMultiConnection.js" library="js" />
             <h:outputScript name="js/ripple-effect.js" library="rio-layout" />
             <h:outputScript name="js/perfect-scrollbar.js" library="rio-layout" />
             <h:outputScript name="js/layout.js" library="rio-layout" />
