modificacion de pantallas

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -63,6 +63,7 @@
                             <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
                             <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
                             <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                            <p:menuitem value="Gestionar Plantillas" url="#{siteUrls.gestionPlantilla}" />
                         </p:submenu>
                         <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
                         <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
@@ -107,6 +108,7 @@
                             <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
                             <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
                             <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
+                            <p:menuitem value="Gestionar Plantillas" url="#{siteUrls.gestionPlantilla}" />
                         </p:submenu>
                         <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
                         <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
