--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -5,7 +5,7 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets">
 
-
+    
     <div id="layout-topbar">
         <style type="text/css">
             #logo img{height:55px; max-width:123px; margin-top:5px; margin-left:8%;}
@@ -30,9 +30,9 @@
                 </ul>
             </li>
             <li>
-                <a class="ripplelink"><i class="icon-notifications1"></i> <span class="Txt">Notificaciones</span></a>
+                <a class="ripplelink"><i class="icon-notifications1"> <!-- <span class="burbuja">1</span> --> </i> </a>
                 <ul>
-                    <li><a href="#">18 Notificaciones</a></li>
+                    <li><a href="#"> 5 Notificaciones </a></li>
                 </ul>
             </li>
             <li><a href="#" class="ripplelink"><i class="icon-wifi83"></i> <span class="Txt">System Settings</span></a></li>
