--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -211,7 +211,7 @@
                             <div class="Container100">
                                 <div class="ContainerIndent Fs12 BoldGray FontRobotoRegular" style="text-align: center">
                                     <div class="EmptyBox10"></div>
-                                    Copyright © 2015
+                                    Copyright UES/FIA/EISI © 2015
                                     <div class="EmptyBox10"></div>
                                 </div>
                             </div>
