--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -84,17 +84,25 @@
                 }
 
                 /*configuracion para tab horizontal*/
-                .ui-tabs-left > .ui-tabs-panels {
+                .paginas > .ui-tabs-panels {
                     float: right;
                     width: 90%;
                 }
-                .ui-tabs-left > .ui-tabs-nav {
+                .paginas > .ui-tabs-nav {
                     float: left;
                     background-image: none;
                     padding-top: 1px;
                     height: auto;
                     width: 80px;
                 }
+                .interacMultiples .ui-tabs-nav{
+                    float: left;
+                    background-image: none;
+                    padding-top: 1px;
+                    height: auto;
+                    width: 220px;
+                }
+
             </style>
             <div style="font-family: serif;">
                 <script type="text/javascript">
