--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -17,6 +17,9 @@
                 <ul>
                     <li>
                         <h:form>
+                            <p:commandLink actionListener="#{loginController.cambiarPass()}" class="menulink ripplelink">
+                                <i class=""></i>Cambiar contraseña
+                            </p:commandLink>
                             <p:commandLink actionListener="#{loginController.logout()}" class="menulink ripplelink">
                                 <i class="icon-thermostat1 Fs16"></i>Salir
                             </p:commandLink>
