diseño de pantalla

--- a/SIENI/SIENI-web/src/main/webapp/password.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/password.xhtml
@@ -13,25 +13,25 @@
     <ui:define name="content">
         <h:form>
             <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
-                <p:outputLabel value="Usuario: " class="Responsive"></p:outputLabel>
+                <p:outputLabel for="usuario" value="Usuario: " class="Responsive"></p:outputLabel>
                 <p:outputLabel id="usuario" value=""></p:outputLabel>
-                <p:outputLabel value="Nombre: " class="Responsive"></p:outputLabel>
+                <p:outputLabel for="nombre" value="Nombre: " class="Responsive"></p:outputLabel>
                 <p:outputLabel id="nombre" value=""></p:outputLabel>
-                <p:outputLabel value="Antigua contraseña: " class="Responsive"></p:outputLabel>
+                <p:outputLabel for="mod_pass0" value="Antigua contraseña: " class="Responsive"></p:outputLabel>
                 <p:password id="mod_pass0" value="" ></p:password>
-                <p:outputLabel value="Contraseña: " class="Responsive"></p:outputLabel>
+                <p:outputLabel for="mod_pass1" value="Contraseña: " class="Responsive"></p:outputLabel>
                 <p:password id="mod_pass1" value="" match="mod_pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta" requiredMessage="Debe ingresar una contraseña"></p:password>
-                <p:outputLabel value="Repetir Contraseña: " class="Responsive"></p:outputLabel>
+                <p:outputLabel for="mod_pass2" value="Repetir Contraseña: " class="Responsive"></p:outputLabel>
                 <p:password id="mod_pass2" value="" ></p:password>
             </p:panelGrid>
             <div class="EmptyBox20"></div>
             <div class="Container100 Responsive">
-                <p:commandButton value="Guardar"/>
+                <p:commandButton value="Guardar" update="mod_p1"/>
                 <p:commandButton value="Limpiar" immediate="true">
-
+                    <p:ajax update="mod_p1" resetValues="true" />
                 </p:commandButton>
                 <p:commandButton value="Cancelar" immediate="true">
-                    
+                    <p:ajax update="mod_p1" resetValues="true" oncomplete="#{mntoUsuariosController.setIndexMenu(0)}"/>
                 </p:commandButton>
             </div>
         </h:form>
