diseño de pantalla rendimiento

--- a/SIENI/SIENI-web/src/main/webapp/password.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/password.xhtml
@@ -16,13 +16,13 @@
                 <p:outputLabel for="mod_pass0" value="Antigua contraseña: " class="Responsive"></p:outputLabel>
                 <p:password id="mod_pass0" value="" ></p:password>
                 <p:outputLabel for="mod_pass1" value="Contraseña: " class="Responsive"></p:outputLabel>
-                <p:password id="mod_pass1" value="" match="mod_pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta" requiredMessage="Debe ingresar una contraseña"></p:password>
+                <p:password id="mod_pass1" value="#{mntoUsuariosController.usuarioModPass.pass1}" match="mod_pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta" requiredMessage="Debe ingresar una contraseña"></p:password>
                 <p:outputLabel for="mod_pass2" value="Repetir Contraseña: " class="Responsive"></p:outputLabel>
-                <p:password id="mod_pass2" value="" ></p:password>
+                <p:password id="mod_pass2" value="#{mntoUsuariosController.usuarioModPass.pass2}" ></p:password>
             </p:panelGrid>
             <div class="EmptyBox20"></div>
             <div class="Container100 Responsive">
-                <p:commandButton value="Guardar" update="mod_p1"/>
+                <p:commandButton value="Guardar" action="#{mntoUsuariosController.guardarModPassword()}" update="mod_p1"/>                
                 <p:commandButton value="Limpiar" immediate="true">
                     <p:ajax update="mod_p1" resetValues="true" />
                 </p:commandButton>
