--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -30,9 +30,9 @@
                 </ul>
             </li>
             <li>
-                <a class="ripplelink"><i class="icon-notifications1"> <!-- <span class="burbuja">1</span> --> </i> </a>
+                <a class="ripplelink"><i class="icon-notifications1"> <span class="burbuja">1</span> </i> </a>
                 <ul>
-                    <li><a href="#"> 5 Notificaciones </a></li>
+                    <li><a href="#{siteUrls.buzonNotificacion}"> Ver Notificaciones </a></li>
                 </ul>
             </li>
             <li><a href="#" class="ripplelink"><i class="icon-wifi83"></i> <span class="Txt">System Settings</span></a></li>
