--- a/SIENI/SIENI-web/src/main/webapp/password.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/password.xhtml
@@ -27,7 +27,7 @@
                     <p:ajax update="mod_p1" resetValues="true" />
                 </p:commandButton>
                 <p:commandButton value="Cancelar" immediate="true">
-                    <p:ajax update="mod_p1" resetValues="true" oncomplete="#{mntoUsuariosController.setIndexMenu(0)}"/>
+                    <p:ajax update="mod_p1" resetValues="true" listener="#{mntoUsuariosController.setIndexMenu(0)}"/>
                 </p:commandButton>
             </div>
         </h:form>
