--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -17,7 +17,7 @@
         <a class="ripplelink WhiteBlue Fright ShowOnMobile" id="show-top-menu"><i class="icon-show8"></i></a>       
 
         <ul id="top-menu" class="ShowOnDesktop">
-            <li>
+            <li >
                 <a class="ripplelink"><i class="icon-search100"></i> <span class="Txt">Buscar</span></a>
                 <ul>
                     <li><input type="text" placeholder="Buscar"/></li>
@@ -29,10 +29,10 @@
                     <li><a href="#">23 Actividades</a></li>
                 </ul>
             </li>
-            <li>
-                <a class="ripplelink"><i class="icon-notifications1"> <span class="burbuja">1</span> </i> </a>
+            <li class="menu-burbuja">
+                <a class="ripplelink "><i class="icon-notifications1"> <span class="burbuja" >#{notificacionesController.count}</span> </i> </a>
                 <ul>
-                    <li><a href="#{siteUrls.buzonNotificacion}"> Ver Notificaciones </a></li>
+                    <li><a> Ver Notificaciones </a></li>
                 </ul>
             </li>
             <li><a href="#" class="ripplelink"><i class="icon-wifi83"></i> <span class="Txt">System Settings</span></a></li>
@@ -41,6 +41,7 @@
             Centro Escolar San Ramón                        
             <br/>
         </div>
+         
 
         <div id="Info" style="text-align: center; color: white;font-size: 1.3em" >
             SIENI
