--- a/SIENI/SIENI-web/src/main/webapp/access-denied.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/access-denied.xhtml
@@ -33,7 +33,7 @@
                     <div class="EmptyBox20"></div>
                 </div>
                 <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
-                    <i class="fa fa-copyright"></i>  Copyright 2015
+                    <i class="fa fa-copyright"></i>  Copyright UES/FIA/EISI © 2015
                 </div>
             </div>
         </div>
