--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -46,7 +46,7 @@
                     </p:submenu>
                     <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
                     <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
-                    <p:menuitem value="Buzón de notificaciones" url="#{siteUrls.buzonNotificacion}"/>
+                    <p:menuitem value="Buzón de Notificaciones" url="#{siteUrls.buzonNotificacion}"/>
                     <p:separator />
                 </pr:menu>
             </c:if>
