--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/topbar.xhtml
@@ -32,7 +32,7 @@
             <li class="menu-burbuja">
                 <a class="ripplelink "><i class="icon-notifications1"> <span class="burbuja" >#{notificacionesController.count}</span> </i> </a>
                 <ul>
-                    <li><a> Ver Notificaciones </a></li>
+                    <li><a href="/SIENI-web/#{siteUrls.buzonNotificacion}"> Ver Notificaciones </a></li>
                 </ul>
             </li>
             <li><a href="#" class="ripplelink"><i class="icon-wifi83"></i> <span class="Txt">System Settings</span></a></li>
