--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -54,7 +54,6 @@
                 <pr:menu >
                     <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
                     <p:submenu label="Gestionar Año Escolar">
-                        <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
                         <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Curso">
@@ -68,8 +67,7 @@
                             <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
                             <p:menuitem value="Gestionar Plantillas" url="#{siteUrls.gestionPlantilla}" />
                         </p:submenu>
-                        <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
-                        <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
+                        <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />                        
                         <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
                         <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
                     </p:submenu>
@@ -86,6 +84,8 @@
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
                         <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
                         <p:menuitem value="Reporte de Alumnos" url="#{siteUrls.reporteAlumnos}" />
+                        <p:menuitem value="Reporte de Docentes" url="#{siteUrls.reporteDocentes}" />
+                        <p:menuitem value="Reporte de Usuarios" url="#{siteUrls.reporteUsuarios}" />
                     </p:submenu>
                     <p:separator />
                 </pr:menu>
@@ -139,7 +139,6 @@
             </c:if>
             <c:if test="#{loginController.tipoRol=='3'}">
                 <pr:menu >
-                    <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
                         <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
@@ -147,23 +146,6 @@
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
                         <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
-                        <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
-                    </p:submenu>
-                    <p:submenu label="Gestionar Curso">
-                        <p:menuitem value="Mantenimiento de Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" />
-                        <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
-                        <p:submenu label="Gestionar Clases">
-                            <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
-                            <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
-                            <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
-                            <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
-                            <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
-                            <p:menuitem value="Gestionar Plantillas" url="#{siteUrls.gestionPlantilla}" />
-                        </p:submenu>
-                        <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
-                        <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
-                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
-                        <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
                     </p:submenu>
                     <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
                     <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
@@ -185,8 +167,7 @@
                 </pr:menu>
             </c:if>
             <c:if test="#{loginController.tipoRol=='4'}">
-                <pr:menu >
-                    <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+                <pr:menu >                    
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
                         <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
@@ -194,23 +175,6 @@
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
                         <p:menuitem value="Mantenimiento de Año escolar" url="#{siteUrls.gestionarAnioEscolar}"/>
-                        <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAlumnos}" />
-                    </p:submenu>
-                    <p:submenu label="Gestionar Curso">
-                        <p:menuitem value="Mantenimiento de Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" />
-                        <p:menuitem value="Mantenimiento de Curso" url="#{siteUrls.gestionarCursos}" />
-                        <p:submenu label="Gestionar Clases">
-                            <p:menuitem value="Programación de Clases" url="#{siteUrls.programacionClases}" />
-                            <p:menuitem value="Clase en Vivo" url="#{siteUrls.claseOnline}" />
-                            <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}" />
-                            <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}" />
-                            <p:menuitem value="Ejercicios" url="#{siteUrls.ejerciciosResueltos}" />
-                            <p:menuitem value="Gestionar Plantillas" url="#{siteUrls.gestionPlantilla}" />
-                        </p:submenu>
-                        <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}" />
-                        <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
-                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" />
-                        <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}" />
                     </p:submenu>
                     <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}" />
                     <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}" />
