--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/template.xhtml
@@ -108,6 +108,15 @@
                 }
 
             </style>
+            <style>
+                .ui-growl-item{
+                    background-color: royalblue;
+                }
+                .ui-growl-message .ui-growl-title{
+                    color: white
+                }
+                
+            </style>
             <div style="font-family: serif;">
                 <script type="text/javascript">
                     PrimeFaces.locales['es'] = {
@@ -263,12 +272,16 @@
                         </p:ajaxStatus>
                     </div>
                 </div>
-                <h:form>
+                <h:form id="g">
                     <p:idleMonitor timeout="1800000">
                         <p:ajax event="idle" listener="#{loginController.onIdle}" update="messages" />
                     </p:idleMonitor>
                     <p:remoteCommand name="updatemessages" update="messages"></p:remoteCommand>
-                    <p:growl sticky="true" id="messages" autoUpdate="true"></p:growl>
+                    <p:growl sticky="true" id="messages" autoUpdate="true">
+                        <h:outputScript>
+                            $("#g\\:messages_container").effect("pulsate", { times:3 }, 2000);
+                        </h:outputScript>
+                    </p:growl>
                 </h:form>
                 <h:outputStylesheet name="css/core-layout.css" library="rio-layout" />
                 <h:outputStylesheet name="css/animate.css" library="rio-layout" />
