correccion de bugs, avance reporte de boleta de nota, falta verificar xq gestionar nota, reporte de nota y boleta de nota tira diferente informacion

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -80,6 +80,7 @@
                         <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
                         <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                         <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
+                        <p:menuitem value="Boleta de Notas" url="#{siteUrls.boletaNota}" />
                         <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
                         <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
@@ -127,6 +128,7 @@
                         <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
                         <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                         <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
+                        <p:menuitem value="Boleta de Notas" url="#{siteUrls.boletaNota}" />
                         <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
                         <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
@@ -157,6 +159,7 @@
                         <p:menuitem value="Reporte de Rendimiento" url="#{siteUrls.reporteRendimientoAlumno}" />
                         <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                         <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
+                        <p:menuitem value="Boleta de Notas" url="#{siteUrls.boletaNota}" />
                         <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
                         <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
