correccion de menu

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -81,7 +81,7 @@
                         <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                         <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
                         <p:menuitem value="Boleta de Notas" url="#{siteUrls.boletaNota}" />
-                        <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
+                        <p:menuitem value="Reporte de Evaluaciones" url="#{siteUrls.reporteEvaluaciones}" />
                         <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
                         <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
@@ -129,7 +129,7 @@
                         <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                         <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
                         <p:menuitem value="Boleta de Notas" url="#{siteUrls.boletaNota}" />
-                        <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
+                        <p:menuitem value="Reporte de Evaluaciones" url="#{siteUrls.reporteEvaluaciones}" />
                         <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
                         <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
@@ -160,7 +160,7 @@
                         <p:menuitem value="Reporte de Avance" url="#{siteUrls.reporteEstadisticoAvanceAlumno}" />
                         <p:menuitem value="Reporte de Notas" url="#{siteUrls.reporteNotasAlumnoAnioEscolar}" />
                         <p:menuitem value="Boleta de Notas" url="#{siteUrls.boletaNota}" />
-                        <p:menuitem value="Reporte de Evaluaciones por año escolar" url="#{siteUrls.reporteEvaluaciones}" />
+                        <p:menuitem value="Reporte de Evaluaciones" url="#{siteUrls.reporteEvaluaciones}" />
                         <p:menuitem value="Reporte de Clases" url="#{siteUrls.reporteClases}" />
                         <p:menuitem value="Reporte de Participación de clases" url="#{siteUrls.reporteParticipacionClases}" />
                         <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}" />
