Correccion de menu, opción bitácora

--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/layoutmenu.xhtml
@@ -98,7 +98,7 @@
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
                         <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
-                        <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
+                        <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Catálogos">
                         <p:menuitem value="Tipo de elementos de plantilla" url="#{siteUrls.catTipoElemPlantilla}" />
@@ -114,7 +114,7 @@
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
                         <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
-                        <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
+                        <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
                         <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
@@ -145,7 +145,7 @@
                     <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" />
                     <p:submenu label="Administración de Sistema">
                         <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}" />
-                        <p:menuitem value="Bítacora" url="#{siteUrls.bitacora}" />
+                        <p:menuitem value="Bitácora" url="#{siteUrls.bitacora}" />
                     </p:submenu>
                     <p:submenu label="Gestionar Año Escolar">
                         <p:menuitem value="Gestionar Materias" url="#{siteUrls.gestionMateria}"/>
